trunk/Archive2/fc/83d2f275418ebc/output
main.cpp:8:5: error: implicit instantiation of undefined template 'dump<void (X::*)()>'
    dump<decltype(&Y::f)>{}
    ^
main.cpp:4:24: note: template is declared here
template<class> struct dump;
                       ^
1 error generated.
